Fixed form margin on mobile

--- a/styles/scss/_components.scss
+++ b/styles/scss/_components.scss
@@ -302,6 +302,7 @@ form {
     box-shadow: 0 0 $l $grey-medium;
     transition: opacity 0.5s ease;
     max-width: 480px;
+    margin-top: $xl;
     & button {
         width: 100%;
     }
